Revision history for perl distribution Convos

5.16 Not Released
 - Fix rendering action messages

5.15 2021-02-03T10:51:00+0900
 - Hide from and icon for notice and error messages
 - Rolled back "channel@connection" as title
 - Changed from connection ID to real_host in chat sidebar
 - Will render Google meet, Webex and Whereby as video invite links

5.14 2021-02-02T06:46:00+0900
 - Add "real_host" as connection participant
 - Improve search logic and changed keywords #560
 - Fix rendering internal video chat links #543
 - Fix errors from commands will show up in the same dialog
 - Fix hiding <img> inside embed that cannot be loaded
 - Fix remembering if toggleDetails has been toggled while scrolling
 - Fix details styling to match paste syntax highlight
 - Fix not getting "#undefined" when scrolling in conversations
 - Fix not keeping scroll lock forever
 - Fix setting document title
 - Fix showing /names response in same dialog
 - Change any Jitsy link to be rendered inside the /video/... page
 - Change Conversation.title to "name@server"
 - Replace renderMessages with Messages store
 - Updated Spanish translation #561

5.13 2021-01-23T12:42:00+0900
 - Fix parsing .po files

5.12 2021-01-23T11:49:00+0900
 - Add language picker to SettingsAccount and login screen
 - Add support for multiple lines in .po files
 - Add "recover" command
 - Fix openssl is required in docker tob build certificates
 - Improved Italian translations #559
   Contributor: SerHack
 - Improved Norwegian translations #553
 - Improved Spanish translations #552
   Contributor: Iván Ávalos and José Joaquín Atria
 - Improved output from "convos build" command
 - Allow .po files to be reloaded when developing
 - Removed "command" from Bot action message events

5.11 2021-01-14T08:57:00+0900
 - Add Norwegian translations #549
 - Add Italian translations #548
   Contributor: SerHack
 - Fix unicode issues related to translations #422
 - Fix loading language files in production
