@@ -2,6 +2,7 @@ Revision history for perl distribution Convos
 
 5.16 Not Released
  - Fix rendering action messages
+ - Improved video conversation name for private conversations
 
 5.15 2021-02-03T10:51:00+0900
  - Hide from and icon for notice and error messages
